src/test/ui/rfc-2627-raw-dylib/import-name-type-x86-only.stderr
error: import name type is only supported on x86
  --> $DIR/import-name-type-x86-only.rs:3:42
   |
LL | #[link(name = "foo", kind = "raw-dylib", import_name_type = "decorated")]
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

